--- a/data/index.html
+++ b/data/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoRaTNCX Web Interface</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap-icons.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -37,6 +38,16 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown me-3">
+                        <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-circle-half"></i> Theme
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><button class="dropdown-item" data-theme="light"><i class="bi bi-sun"></i> Light</button></li>
+                            <li><button class="dropdown-item" data-theme="dark"><i class="bi bi-moon"></i> Dark</button></li>
+                            <li><button class="dropdown-item" data-theme="auto"><i class="bi bi-circle-half"></i> Auto</button></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
                         <span class="navbar-text">
                             <span id="connection-status" class="badge bg-danger">Disconnected</span>
@@ -334,6 +345,37 @@
 
         <!-- Configuration Tab -->
         <div id="config-tab" class="tab-content">
+            <div class="row">
+                <!-- WiFi Status Card -->
+                <div class="col-md-12 mb-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5><i class="bi bi-wifi"></i> WiFi Status</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <strong>Mode:</strong>
+                                    <span id="wifi-mode" class="badge bg-primary">AP</span>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>SSID:</strong>
+                                    <span id="wifi-current-ssid">LoRaTNCX</span>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>Status:</strong>
+                                    <span id="wifi-connection-status" class="badge bg-success">Connected</span>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>IP Address:</strong>
+                                    <span id="wifi-current-ip">192.168.4.1</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
