--- a/data/config.html
+++ b/data/config.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="color-scheme" content="dark light" />
         <title>LoRaTNCX • Configuration</title>
-        <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.min.css" />
+        <link rel="stylesheet" href="./vendor/bootstrap/bootstrap.min.css" />
     </head>
     <body class="d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom shadow-sm">
@@ -75,8 +75,8 @@
         <footer class="border-top py-3 mt-auto">
             <div class="container text-center text-muted small">LoRaTNCX Web Interface</div>
         </footer>
-        <script src="/vendor/bootstrap/bootstrap.bundle.min.js" defer></script>
-        <script type="module" src="/js/config.js" defer></script>
+        <script src="./vendor/bootstrap/bootstrap.bundle.min.js" defer></script>
+        <script type="module" src="./js/config.js" defer></script>
     </body>
 </html>
 
