--- a/data/index.html
+++ b/data/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="color-scheme" content="dark light" />
         <title>LoRaTNCX • Dashboard</title>
-        <link rel="stylesheet" href="./vendor/bootstrap/bootstrap.min.css" />
+        <link rel="stylesheet" href="./css/bootstrap.css" />
         <style>
             body {
                 min-height: 100vh;
@@ -59,7 +59,7 @@
         <footer class="border-top py-3 mt-auto">
             <div class="container text-center text-muted small">LoRaTNCX Web Interface</div>
         </footer>
-        <script src="./vendor/bootstrap/bootstrap.bundle.min.js" defer></script>
+        <script src="./js/bootstrap.js" defer></script>
         <script type="module" src="./js/index.js" defer></script>
     </body>
 </html>
