--- a/data/status.html
+++ b/data/status.html
@@ -51,6 +51,16 @@
                     <p class="mt-3 mb-0">Fetching telemetry…</p>
                 </div>
             </section>
+            <section class="mt-4">
+                <div class="d-flex align-items-center mb-3">
+                    <h2 class="h5 mb-0">Recent activity</h2>
+                </div>
+                <div class="card">
+                    <div class="card-body" data-activity-feed>
+                        <p class="text-muted mb-0">Waiting for activity…</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="border-top py-3 mt-auto">
             <div class="container text-center text-muted small">LoRaTNCX Web Interface</div>
