Add web console for command execution

--- a/data/index.html
+++ b/data/index.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" data-nav="index" href="/index.html">Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link" data-nav="status" href="/status.html">Status</a></li>
                         <li class="nav-item"><a class="nav-link" data-nav="config" href="/config.html">Configuration</a></li>
+                        <li class="nav-item"><a class="nav-link" data-nav="console" href="/console.html">Console</a></li>
                     </ul>
                     <div class="d-flex align-items-center gap-2">
                         <label class="form-label mb-0 small" for="themeSelect">Theme</label>
