--- a/data/config.html
+++ b/data/config.html
@@ -57,6 +57,20 @@
                     </div>
                 </div>
             </section>
+            <section class="mb-4">
+                <h2 class="h5">Configuration presets</h2>
+                <div class="card">
+                    <div class="card-body">
+                        <div data-preset-feedback></div>
+                        <div data-preset-list>
+                            <div class="text-center py-4 text-muted">
+                                <div class="spinner-border" role="status" aria-hidden="true"></div>
+                                <p class="mt-3 mb-0">Loading presets…</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section>
                 <h2 class="h5">Send configuration command</h2>
                 <form data-config-form class="card card-body gap-3">
