--- a/web/src/index.html
+++ b/web/src/index.html
@@ -288,7 +288,7 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="serialPassthrough">
+                                    <input class="form-check-input" type="checkbox" id="serialPassthrough" aria-describedby="serialPassthroughHelp">
                                     <label class="form-check-label" for="serialPassthrough">
                                         Serial Passthrough
                                     </label>
